fix weird letter spacing in headers

--- a/dd-wrt-inspired-themes.user.styl
+++ b/dd-wrt-inspired-themes.user.styl
@@ -928,6 +928,7 @@ b() { box-shadow: arguments }
         background: bg5
         border-color: bg5
         color: fg1
+        letter-spacing: .95px
     }
 
     // Submit options button footer
